--- a/StatickiClanovi/StatičkiČlanovi.csproj
+++ b/StatickiClanovi/StatičkiČlanovi.csproj
@@ -40,8 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MojaKlasa.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="StatičkiČlanovi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
