--- a/StatičkiČlanovi/StatičkiČlanovi.csproj
+++ b/StatičkiČlanovi/StatičkiČlanovi.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8E658D16-D390-4B80-9B33-866BF0011ECB}</ProjectGuid>
+    <ProjectGuid>{A216CAE3-F6CF-4589-B4F9-5F895C0DC071}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UgnjezdjenaKlasa</RootNamespace>
-    <AssemblyName>UgnjezdjenaKlasa</AssemblyName>
+    <RootNamespace>Vsite.CSharp.StatičkiČlanovi</RootNamespace>
+    <AssemblyName>StatičkiČlanovi</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -34,20 +34,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="BrojačInstanci.cs" />
+    <Compile Include="StatičkiČlanovi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
