--- a/Class-Struct/Class-Struct.csproj
+++ b/Class-Struct/Class-Struct.csproj
@@ -7,7 +7,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Vsite.CSharp</RootNamespace>
-    <AssemblyName>ClassVsStruct</AssemblyName>
+    <AssemblyName>Class-Struct</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
