--- a/Testovi/Testovi.csproj
+++ b/Testovi/Testovi.csproj
@@ -57,6 +57,7 @@
     <Compile Include="TestDefinicijeTipa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestInternal.cs" />
+    <Compile Include="TestKonstruktoraStrukture.cs" />
     <Compile Include="TestKonstruktorKlase.cs" />
     <Compile Include="TestKorištenjaObjekta.cs" />
     <Compile Include="TestStatičkihČlanova.cs" />
