--- a/Testovi/Testovi.csproj
+++ b/Testovi/Testovi.csproj
@@ -56,6 +56,7 @@
     <Compile Include="TestClass-Struct.cs" />
     <Compile Include="TestDefinicijeTipa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestDelegiranjaKonstruktora.cs" />
     <Compile Include="TestInternal.cs" />
     <Compile Include="TestKonstruktoraStrukture.cs" />
     <Compile Include="TestKonstruktorKlase.cs" />
