--- a/IDisposable/IDisposable.csproj
+++ b/IDisposable/IDisposable.csproj
@@ -36,9 +36,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="IDisposable0.cs" />
+    <Compile Include="IDisposable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RadSDatotekom.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
