--- a/Testovi/Testovi.csproj
+++ b/Testovi/Testovi.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDelegiranjaKonstruktora.cs" />
     <Compile Include="TestDestruktora.cs" />
+    <Compile Include="TestIDisposable.cs" />
     <Compile Include="TestInternal.cs" />
     <Compile Include="TestKonstruktoraStrukture.cs" />
     <Compile Include="TestKonstruktorKlase.cs" />
@@ -86,14 +87,6 @@
     <ProjectReference Include="..\GCCollect\GCCollect.csproj">
       <Project>{30192e1f-7cf2-4af9-b32f-2d3eac320a74}</Project>
       <Name>GCCollect</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\IDisposable0\IDisposable0.csproj">
-      <Project>{a26e41af-3e24-4195-94ee-42a2cb711696}</Project>
-      <Name>IDisposable0</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\IDisposable1\IDisposable1.csproj">
-      <Project>{198a10d8-9be4-4b4f-8c1e-71394c8d4b46}</Project>
-      <Name>IDisposable1</Name>
     </ProjectReference>
     <ProjectReference Include="..\Internal1\Internal1.csproj">
       <Project>{dcf1f9f5-874d-4a44-9161-655bca1f868b}</Project>
